Fix headers being visible when they shouldn't be

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,6 +174,7 @@ a {
     margin-bottom: 10px;
     margin-left: 15px;
     text-align: left;
+    display: none;
 }
 
 /* Charts */
